--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 dependencies = [
     "tabulate>=0.9.0",
+    "pandas>=2.2.2",
+    "pyarrow>=17.0.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
